--- a/styles/scss/partials/_base.scss
+++ b/styles/scss/partials/_base.scss
@@ -45,6 +45,7 @@ section {
 }
 
 h1 {
+	text-align: center;
 	margin: 0;
 	font-size: 9vh;
 }
@@ -55,11 +56,12 @@ h2 {
 }
 
 h3 {
+	text-align: center;
 	font-size: 6vh;
-
 }
 
 h4 {
+	text-align: center;
 	font-size: 5vh;
 }
 
